--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@ th {
         <div className="text-center mb-6">
           <div className="flex items-end justify-between">
             <div className="flex-1" />
-            <h1 className="text-2xl font-bold">Reanimations-Timer</h1>
+            <h1 className="text-2xl font-bold">REA-Timer</h1>
             <div className="flex-1 flex justify-end items-end">
-              <p className="text-xs text-gray-400">by Til Sonntag</p>
+              <p className="text-[10px] text-gray-400">by Til Sonntag</p>
             </div>
           </div>
         </div>
@@ -576,7 +576,7 @@ th {
           {/* ENDE Button in rechter oberer Ecke */}
           <button 
             onClick={endResuscitation} 
-            className="absolute top-3 right-3 px-4 py-2 bg-red-600 hover:bg-red-700 rounded-lg font-semibold transition-colors"
+            className="absolute top-2 right-2 px-3 py-1 text-sm bg-red-600 hover:bg-red-700 rounded-lg font-semibold transition-colors"
           >
             ENDE
           </button>
