--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ th {
           {/* ENDE Button in rechter oberer Ecke */}
           <button 
             onClick={endResuscitation} 
-            className="absolute top-2 right-2 px-3 py-1 text-sm bg-red-600 hover:bg-red-700 rounded-lg font-semibold transition-colors"
+            className="absolute top-2 right-2 px-2 py-0.5 text-xs bg-red-600 hover:bg-red-700 rounded font-semibold transition-colors"
           >
             ENDE
           </button>
